--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ src_dir = .
 [env:d1mini]
 platform = espressif8266
 board = d1_mini
+board_build.f_cpu = 160000000L
 framework = arduino
 monitor_speed = 115200
 upload_speed = 1000000
