--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ default_envs = d1mini
 src_dir = .
 
 [env:d1mini]
-platform = espressif8266
+platform = espressif8266@^4.2.1
 board = d1_mini
 board_build.f_cpu = 160000000L
 framework = arduino
